...
                ToolbarItem(placement: .topBarTrailing) {
                    Button {
                        withAnimation {
                            isFilterOpen.toggle()
                        }
                    } label: {
                        Image(systemName: "slider.vertical.3")
                            .imageScale(.large)
                    }
                    .accessibilityIdentifier("filtersButton")
                }
            }
            .searchable(
                text: $searchText,
                placement: .navigationBarDrawer(displayMode: .always),
                prompt: "Search characters"
            )
            .onChange(
                of: searchText,
                { _, _ in
                    applyFilters()
                }
...
